<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            >

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_activity_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_title"
                app:met_floatingLabel="normal"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_activity_start_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_start_place"
                app:met_floatingLabel="normal"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_activity_end_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_end_place"
                app:met_floatingLabel="normal"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_activity_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_des"
                app:met_floatingLabel="normal"/>

            <TextView
                android:id="@+id/edit_activity_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_time"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />

            <Button
                android:id="@+id/bt_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publish"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>