<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="40dp"
              android:paddingRight="40dp"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:elevation="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <ImageView
                android:id="@+id/iv_user_mage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/sym_def_app_icon"
                />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"/>

                <RadioGroup
                    android:id="@+id/rg_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/male"
                    >

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"/>

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/et_birth_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_year"
                />

            <EditText
                android:id="@+id/et_user_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_des"/>

            <Button
                android:id="@+id/bt_user_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>