<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="4dp"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_activity_pic"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/city_ride"
                />

            <TextView
                android:id="@+id/tv_activityinfo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="2dp"
                android:layout_below="@id/iv_activity_pic"
                android:textColor="@color/colorAccent"
                android:text="@string/activity_title"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/tv_activityinfo_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="2dp"
                android:paddingLeft="10dp"
                android:layout_below="@id/tv_activityinfo_title"
                android:textColor="@color/colorPrimary"
                android:text="@string/activity_time"
                />

            <TextView
                android:id="@+id/tv_activityinfo_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_marginTop="2dp"
                android:paddingRight="10dp"
                android:layout_below="@id/tv_activityinfo_title"
                android:textColor="@color/colorPrimary"
                android:text="@string/activity_route"
                />

            <TextView
                android:id="@+id/tv_activityinfo_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@id/tv_activityinfo_time"
                android:textColor="@color/colorPrimary"
                android:text="@string/activity_des"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>