<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_activity_pic"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/city_ride"
                />
            <ImageView
                android:id="@+id/iv_activity_title"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/iv_activity_pic"
                android:background="@drawable/icon_title"
                />
            <TextView
                android:id="@+id/tv_activityinfo_title"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_below="@id/iv_activity_pic"
                android:layout_toRightOf="@id/iv_activity_title"
                android:text="@string/activity_title"
                android:textSize="24sp"
                />
            <ImageView
                android:id="@+id/iv_activity_time"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/iv_activity_title"
                android:background="@drawable/icon_time"
                />
            <TextView
                android:id="@+id/tv_activityinfo_time"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_below="@id/iv_activity_title"
                android:layout_toRightOf="@id/iv_activity_time"
                android:text="@string/activity_time"
                />
            <ImageView
                android:id="@+id/iv_activity_route"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/iv_activity_time"
                android:background="@drawable/icon_location"
                />
            <TextView
                android:id="@+id/tv_activityinfo_route"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_below="@id/iv_activity_time"
                android:layout_toRightOf="@id/iv_activity_route"
                android:text="@string/activity_route"
                />
            <ImageView
                android:id="@+id/iv_activity_des"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/iv_activity_route"
                android:background="@drawable/icon_describe"
                />
            <TextView
                android:id="@+id/tv_activityinfo_des"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_below="@id/iv_activity_route"
                android:layout_toRightOf="@id/iv_activity_des"
                android:text="@string/activity_des"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>